<resources>
    <string name="app_name">FirebaseDemo-Chat</string>
    <string name="click">CLICK</string>
    <string name="go_to_storage">Go To Storage</string>
    <string name="upload_bytes">UploadBytes</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_stream">Upload Stream</string>
    <string name="upload_local_file">Upload Local File</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">407610923300051</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb407610923300051</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="download">Download \n Local</string>
</resources>
