<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vannhat.firebasedemo_chat.CloudStorageDemo"
    >

    <ImageView
        android:id="@+id/img_girl"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_150"
        android:layout_margin="@dimen/dp_20"
        android:contentDescription="@string/todo"
        android:src="@drawable/khangan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_upload_bytes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_bytes"
        app:layout_constraintLeft_toLeftOf="@id/img_girl"
        app:layout_constraintTop_toBottomOf="@id/img_girl"
        />

    <ImageView
        android:id="@+id/img_upload"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_150"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/color_gray"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_cloud_upload_black_24dp"
        app:layout_constraintLeft_toRightOf="@id/img_girl"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/pr_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/img_upload"
        app:layout_constraintStart_toStartOf="@+id/img_upload"
        app:layout_constraintTop_toTopOf="@+id/img_upload"
        style="?android:attr/progressBarStyleHorizontal"
        />

    <Button
        android:id="@+id/btn_upload_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_local_file"
        app:layout_constraintEnd_toEndOf="@+id/img_upload"
        app:layout_constraintStart_toStartOf="@+id/img_upload"
        app:layout_constraintTop_toBottomOf="@id/img_upload"
        />
    <Button
        android:id="@+id/btn_upload_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintStart_toEndOf="@+id/img_upload"
        app:layout_constraintTop_toTopOf="@+id/img_upload"
        />
    <Button
        android:id="@+id/btn_upload_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/img_upload"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload_pause"
        />

    <Button
        android:id="@+id/btn_upload_stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/upload_stream"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload_bytes"
        />

    <ImageView
        android:id="@+id/img_downloaded"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_150"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/color_gray"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_cloud_download_black_24dp"
        app:layout_constraintLeft_toRightOf="@id/img_girl"
        app:layout_constraintTop_toBottomOf="@id/btn_upload_file"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
